<resources>
    <string name="app_name">MilagrosoEhealth</string>
    <string name="welcome_text">Bienvenido nuevamente!</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="documento_hint">Ingrese su documento</string>
    <string name="password_hint">Ingrese su contraseña</string>
    <string name="forgot">Recuperar contraseña</string>
    <string-array name="rol">
        <item>Seleccione su rol...</item>
        <item>Paciente</item>
        <item>Doctor</item>
    </string-array>
    <string name="title_activity_doctor_view">DoctorViewActivity</string>
    <string name="hello_blank_fragment">TODO: Profile</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_patients">Patients</string>
    <string name="tab_location">Ubicación</string>
    <string name="all_btn_text">Todos</string>
    <string name="diabetes_btn_text">Diabetes</string>
    <string name="hipertension_btn_text">Hipertensión</string>
    <string name="cardiaca_btn_text">Insuficiencia Cardiaca</string>
    <string name="title_activity_patient_view">PatientViewActivity</string>
    <string name="tab_vital_signs">Signos Vitales</string>
    <string name="vitalSign_btn_text">Crear reporte</string>
    <string name="channel_name">test</string>
    <string name="channel_description">description test</string>

</resources>