<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.milagroso.fragments.PatientsFragment">

    <HorizontalScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/all_btn_text"
                android:textSize="11sp"
                app:cornerRadius="30dp"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/diabetes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/diabetes_btn_text"
                android:textSize="11sp"
                app:cornerRadius="30dp"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/hipertension_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hipertension_btn_text"
                android:textSize="11sp"
                app:cornerRadius="30dp"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/cardiaca_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cardiaca_btn_text"
                android:textSize="11sp"
                app:cornerRadius="30dp"
                android:layout_margin="5dp"
                />

        </LinearLayout>
    </HorizontalScrollView>

    <ListView
        android:id="@+id/listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        tools:listitem="@layout/list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>