<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_700"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="438dp"
        android:layout_marginBottom="273dp"
        android:background="@drawable/blob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/doctors_login"
        tools:srcCompat="@drawable/doctors_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="275dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"

        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center|start"
                android:text="@string/welcome_text"
                android:textColor="@color/cyan_700"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/document"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/editext_document"
                android:drawablePadding="10dp"
                android:hint="@string/documento_hint"
                android:inputType="number"
                android:singleLine="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/editext_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Spinner
                android:id="@+id/rol"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/rol"
                />


            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/forgot"
                android:textColor="@color/cyan_500"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autoText="false"
                android:onClick="onClick"
                android:text="@string/login_btn"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>